# connection-pool-drop-example

./: Cargo.toml  Rocket.toml
src/: main.rs
