[package]
name = "connection-pool-drop-example"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "6c3d35e7e5bceaf11c329623d48f81c276407030" }
rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket", rev = "6c3d35e7e5bceaf11c329623d48f81c276407030", default-features = false, features = [
    "diesel_sqlite_pool",
] }
diesel = { version = "2.0.0" }
